--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.13.1"
+    "astro": "^4.13.1",
+    "astro-icon": "^1.1.0",
+    "iconify": "^1.4.0"
   }
 }
