--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "astro": "^4.13.1",
     "astro-icon": "^1.1.0",
+    "astro-relative-links": "^0.4.0",
     "iconify": "^1.4.0"
   }
 }
