不要なコードの削除

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "users-watabetomonari-desktop-sunshine-project",
+  "name": "sunshine-project",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
